[package]
name = "tcp"
version = "0.1.0"
authors = ["Michal Tomaszewicz <235568@student.pwr.edu.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whoami = "1.1.0"
winapi = {version = "0.3", features = ["wincon", "winuser"]}
